// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unit:utils/loaders > cjs > should return loader configuration for cjs bundle 1`] = `
{
  ".cjs": "js",
  ".css": "css",
  ".cts": "ts",
  ".d.cts": "copy",
  ".d.mts": "copy",
  ".d.ts": "copy",
  ".data": "binary",
  ".eot": "copy",
  ".gif": "copy",
  ".jpeg": "copy",
  ".jpg": "copy",
  ".js": "js",
  ".json": "json",
  ".json5": "json",
  ".jsonc": "json",
  ".jsx": "jsx",
  ".mjs": "js",
  ".mts": "ts",
  ".otf": "copy",
  ".png": "copy",
  ".svg": "copy",
  ".ts": "ts",
  ".tsx": "tsx",
  ".txt": "text",
  ".woff": "copy",
  ".woff2": "copy",
}
`;

exports[`unit:utils/loaders > cjs > should return loader configuration for cjs transpilation 1`] = `
{
  ".cjs": "copy",
  ".css": "copy",
  ".cts": "ts",
  ".d.cts": "copy",
  ".d.mts": "copy",
  ".d.ts": "copy",
  ".data": "copy",
  ".eot": "copy",
  ".gif": "copy",
  ".jpeg": "copy",
  ".jpg": "copy",
  ".js": "js",
  ".json": "copy",
  ".json5": "copy",
  ".jsonc": "copy",
  ".jsx": "jsx",
  ".mjs": "js",
  ".mts": "ts",
  ".otf": "copy",
  ".png": "copy",
  ".svg": "copy",
  ".ts": "ts",
  ".tsx": "tsx",
  ".txt": "copy",
  ".woff": "copy",
  ".woff2": "copy",
}
`;

exports[`unit:utils/loaders > esm > should return loader configuration for esm bundle 1`] = `
{
  ".cjs": "js",
  ".css": "css",
  ".cts": "ts",
  ".d.cts": "copy",
  ".d.mts": "copy",
  ".d.ts": "copy",
  ".data": "binary",
  ".eot": "copy",
  ".gif": "copy",
  ".jpeg": "copy",
  ".jpg": "copy",
  ".js": "js",
  ".json": "json",
  ".json5": "json",
  ".jsonc": "json",
  ".jsx": "jsx",
  ".mjs": "js",
  ".mts": "ts",
  ".otf": "copy",
  ".png": "copy",
  ".svg": "copy",
  ".ts": "ts",
  ".tsx": "tsx",
  ".txt": "text",
  ".woff": "copy",
  ".woff2": "copy",
}
`;

exports[`unit:utils/loaders > esm > should return loader configuration for esm transpilation 1`] = `
{
  ".cjs": "js",
  ".css": "copy",
  ".cts": "ts",
  ".d.cts": "copy",
  ".d.mts": "copy",
  ".d.ts": "copy",
  ".data": "copy",
  ".eot": "copy",
  ".gif": "copy",
  ".jpeg": "copy",
  ".jpg": "copy",
  ".js": "js",
  ".json": "copy",
  ".json5": "copy",
  ".jsonc": "copy",
  ".jsx": "jsx",
  ".mjs": "copy",
  ".mts": "ts",
  ".otf": "copy",
  ".png": "copy",
  ".svg": "copy",
  ".ts": "ts",
  ".tsx": "tsx",
  ".txt": "copy",
  ".woff": "copy",
  ".woff2": "copy",
}
`;
